# allora

./: .gitignore  Cargo.toml  Makefile  debug.gdb  link.x  run.sh  run_no_net.sh  run_nonet.sh  run_raspi3b.sh  shell.nix
.cargo/: config.toml
src/: allocator.rs  arena.rs  bitmap.rs  boot.S  container.rs  exception.S  exception.rs  gic.rs  label.rs  linked_list.rs  main.rs  mutex.rs  schedule.rs  switch.S  switch.rs  thread.rs  timer.rs  uart.rs  utils.rs
src/apps/: shell.rs
src/collections/: bitmap.rs  list.rs  mod.rs
src/kobject/: container.rs  label.rs  mod.rs  thread.rs  time_slices.rs
src/lfchannel/: channel.rs  list.rs  mod.rs
src/memory/: arena.rs  mod.rs  page.rs  page_tree.rs  pool.rs  utils.rs  yaarena.rs
src/mm/: arena.rs  chunk_list.rs  koarena.rs  mod.rs  page.rs  page_tree.rs  pool.rs
src/virtio/: entropy.rs
