[package]
name = "aarch64os"
version = "0.1.0"
authors = ["Amit Aryeh Levy <amit@amitlevy.com>"]
edition = "2018"

[dependencies]
linked_list_allocator = "0.9.0"
labeled = { git = "https://github.com/cherrypiejam/labeled", features = ["buckle2"] }
heapless = "0.8.0"

[profile.release]
debug = true

[build-dependencies]
cc = "1.0.25"
